[tool.poetry]
name = "daily-buy-btc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
requests = "^2.28.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.990"
pyproject-flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 112

[tool.isort]
line_length = 112
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.mypy]
python_version = "3.9"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 112
max-complexity = 18
ignore = "E203,E266,W503,"
exclude = ['.venv','__pycache__']